--- a/posts/_metadata.yml
+++ b/posts/_metadata.yml
@@ -18,3 +18,8 @@ toc: true
 toc-depth: 3
 
 page-layout: article
+
+# Blog comments
+comments: 
+  utterances: 
+    repo:  diopBachir/blog-comments
